--- a/scss/components/_app-sidebar.scss
+++ b/scss/components/_app-sidebar.scss
@@ -227,14 +227,17 @@
     position: absolute;
     top: 0;
     left: 100%;
-    display: block;
     width: 66px;
     height: 66px;
     background: transparent;
     border: none;
     outline: none;
     padding: 20px;
+    display: none;
     @include transition-single(all, .3s, ease-in-out);
+    @include media($mainUITo - 1) {
+        display: block;
+    }
     > span {
         display: block;
         position: relative;
